k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smart-vineyard
  namespace: smart-vineyard
spec:
  selector:
    app.kubernetes.io/name: smart-vineyard
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
