k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smart-vineyard
  namespace: smart-vineyard
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/client-body-timeout: "600"
spec:
  ingressClassName: gitlab-nginx
  rules:
    - host: smartvineyard.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smart-vineyard
                port:
                  name: http
    - host: smartvineyard.24hlp.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smart-vineyard
                port:
                  name: http
  tls:
    - hosts:
        - smartvineyard.ru
      secretName: smart-vineyard-tls
    - hosts:
        - smartvineyard.24hlp.ru
      secretName: smart-vineyard-24hlp-tls
